# ProdPulse

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  dummy-repo.md  pyproject.toml
agents/: chat_evidence_agents.py  code_investigation.py  log_context.py  rca_graph.py
api/: main.py
core/: config.py
data/: architecture_context.json  deployment-history.json  historical-incidents.json  new-incident.json  simulated-github-code.json  simulated-logs.json
domain/: models.py
incident_management.egg-info/: SOURCES.txt
repositories/: code_repository.py  confluence_repository.py  log_repository.py
scripts/: seed_loki.py
services/: advisor.py  analysis_sessions.py  code_change_proposal.py  confidence.py  confluence_summarizer.py  draft_pr_proposal.py  github_draft_pr.py  incident_management.py
skills/add-confluence-incident-evidence/: SKILL.md
skills/add-confluence-incident-evidence/agents/: openai.yaml
skills/add-confluence-incident-evidence/references/: implementation-contract.md
skills/add-draft-pr-proposal/: SKILL.md
skills/add-draft-pr-proposal/agents/: openai.yaml
skills/add-draft-pr-proposal/references/: implementation-contract.md
tests/: test_code_change_proposal.py  test_github_draft_pr.py  test_incident_management.py  test_log_context.py  test_rca_graph_log_context.py
vector/: azure_ai_search_store.py  in_memory_store.py  store.py
